8326990: [lworld] make value classes a preview feature